--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "build-sandbox": "ng build -c=sandbox",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start-server": "json-server --watch db.json --port 3000",
+    "dev": "concurrently \"npm run start\" \"npm run start-server\""
   },
   "private": true,
   "dependencies": {
@@ -39,7 +41,9 @@
     "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "concurrently": "8.2.2",
     "jasmine-core": "~4.6.0",
+    "json-server": "0.17.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
